// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeedbackCard - Snapshots > matches snapshot for feedback form 1`] = `
<div
  class="cursor-pointer text-sm leading-snug text-muted-foreground transition-colors hover:text-foreground"
>
  What do you think about Pubky?
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot for user info section 1`] = `
<div
  class="text-base font-bold text-foreground"
>
  Your Name
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="flex flex-col gap-2 custom-feedback"
  data-testid="feedback-card"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
  >
    Feedback
  </h2>
  <div
    class="flex flex-col gap-3 rounded-lg border border-dashed border-border/50 p-5"
  >
    <div
      class="flex items-center gap-2"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="User"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=68"
        />
        <div
          data-testid="avatar-fallback"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
      </div>
      <div
        class="text-base font-bold text-foreground"
      >
        Your Name
      </div>
    </div>
    <div
      class="cursor-pointer text-sm leading-snug text-muted-foreground transition-colors hover:text-foreground"
    >
      What do you think about Pubky?
    </div>
  </div>
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex flex-col gap-2"
  data-testid="feedback-card"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
  >
    Feedback
  </h2>
  <div
    class="flex flex-col gap-3 rounded-lg border border-dashed border-border/50 p-5"
  >
    <div
      class="flex items-center gap-2"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="User"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=68"
        />
        <div
          data-testid="avatar-fallback"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
      </div>
      <div
        class="text-base font-bold text-foreground"
      >
        Your Name
      </div>
    </div>
    <div
      class="cursor-pointer text-sm leading-snug text-muted-foreground transition-colors hover:text-foreground"
    >
      What do you think about Pubky?
    </div>
  </div>
</div>
`;
